--- a/.gitignore
+++ b/.gitignore
@@ -10194,3 +10194,4 @@ node_modules/yocto-queue/index.js
 node_modules/yocto-queue/license
 node_modules/yocto-queue/package.json
 node_modules/yocto-queue/readme.md
+node_modules
