--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "react": "^18.2.0",
