--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "nova-vision",
+  "name": "novavision",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/roboto": "^5.0.8",
-    "@react-three/drei": "^9.83.9",
-    "@react-three/fiber": "^8.14.1",
+    "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.15.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.156.1"
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.72.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
