--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
+    "@google/model-viewer": "^3.5.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "three": "^0.156.1"
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
