--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
+    "@google/model-viewer": "^3.5.0",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "react": "^18.2.0",
