--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.8",
     "@google/model-viewer": "^3.5.0",
+    "@mui/material": "^5.16.6",
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "react": "^18.2.0",
